# rust-test-hotcpu

./: Cargo.toml
src/: main.rs
