[package]
name = "hotcpu"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1


[dependencies]
ntex = { version = "0.5", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.13.1"
# threadpool = "1.8.1"
tiny-keccak = { version = "2.0", features = ["sha3"] }
rand = "0.8.5"
log = "0.4"
env_logger = "0.9"
# redis = "0.21.5"
clap = { version = "4.1.1", features = ["derive"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
chrono = "0.4.23"
